left align fix

--- a/src/app/recipes/recipes.component.scss
+++ b/src/app/recipes/recipes.component.scss
@@ -9,11 +9,9 @@ html {
 }
 
 .blog-list{
-    width: 85%;
-    // background-color: aqua ;
+    width: 82.5%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     align-items: center;
 }
 .blog-post{
